infrastructure/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pricebrain
  labels:
    name: pricebrain
    environment: production
